Fix script file name.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -43,7 +43,7 @@ jobs:
           fi
 
       - name: Run Python script
-        run: python scripts/fetch-qb-data.py
+        run: python scripts/fetch-team-data.py
 
       # Upload the file the script produced
       - name: Upload Python output
