--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -4,9 +4,8 @@ name: Deploy Next.js site to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  # push:
+  push:
   #   branches: ["main"]
-  [push]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
