[3] Update to use nflreadpy. Fetch QB data.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -42,9 +42,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Python script
-        env:
-          BALLDONTLIEAPI_KEY: ${{ secrets.BALLDONTLIEAPI_KEY }}
-        run: python scripts/fetch-team-data.py
+        run: python scripts/fetch-team-data.py python scripts/fetch-qb-data.py
 
       # Upload the file the script produced
       - name: Upload Python output
