[3] Fix bug that prevented both Pythonb scripts running in the pipeline.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -42,7 +42,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Python script
-        run: python scripts/fetch-team-data.py python scripts/fetch-qb-data.py
+        run: |
+          python scripts/fetch-team-data.py
+          python scripts/fetch-qb-data.py
 
       # Upload the file the script produced
       - name: Upload Python output
