[5] Add NGS stats generated files to uploaded Python files during GitHub Action.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -60,6 +60,9 @@ jobs:
             scripts/generated-files/team-data.ts
             scripts/generated-files/qb-data-weekly.ts
             scripts/generated-files/qb-data-season.ts
+            scripts/generated-files/ngs-data-passing.ts
+            scripts/generated-files/ngs-data-receiving.ts
+            scripts/generated-files/ngs-data-rushing.ts
 
   # Build job
   build:
