--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -55,4 +55,125 @@ jobs:
           script: |
             const artifactName = 'python-output';
             const owner = context.repo.owner;
-            co
+            const repo = context.repo.repo;
+            const workflow_id = context.workflow;
+
+            // Get last successful run
+            const runs = await github.actions.listWorkflowRuns({
+              owner,
+              repo,
+              workflow_id,
+              status: 'success',
+              per_page: 10
+            });
+
+            if (!runs.data.workflow_runs.length) {
+              core.setFailed('No previous successful runs found');
+            }
+
+            const lastRunId = runs.data.workflow_runs[0].id;
+
+            // Find artifact from that run
+            const artifacts = await github.actions.listWorkflowRunArtifacts({
+              owner,
+              repo,
+              run_id: lastRunId
+            });
+
+            const artifact = artifacts.data.artifacts.find(a => a.name === artifactName);
+
+            if (!artifact) {
+              core.setFailed('No previous artifact found');
+            }
+
+            const artifactUrl = artifact.archive_download_url;
+            core.info(`Artifact URL: ${artifactUrl}`);
+
+            // Download and unzip artifact
+            const exec = require('@actions/exec');
+            await exec.exec(`curl -L -o ${artifactName}.zip -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "${artifactUrl}"`);
+            await exec.exec(`unzip -o ${artifactName}.zip -d ./python-output`);
+
+      - name: Upload Python output (always)
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-output
+          path: |
+            scripts/generated-files/team-data.ts
+            scripts/generated-files/qb-data-weekly.ts
+            scripts/generated-files/qb-data-season.ts
+            scripts/generated-files/ngs-data-passing.ts
+            scripts/generated-files/ngs-data-receiving.ts
+            scripts/generated-files/ngs-data-rushing.ts
+
+  build:
+    needs: data_fetch
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download Python artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: python-output
+          path: ./python-output
+
+      - name: Move Python output into project
+        run: cp -r ./python-output/* scripts/generated-files/
+
+      - name: Detect package manager
+        id: detect-package-manager
+        run: |
+          if [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "Unable to determine package manager"
+            exit 1
+          fi
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22.16.0"
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+        with:
+          static_site_generator: next
+
+      - name: Restore cache
+        uses: actions/cache@v4
+        with:
+          path: .next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+
+      - name: Install dependencies
+        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+
+      - name: Verify generated data files
+        run: ls -l scripts
+
+      - name: Build with Next.js
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./out
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
