--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -2,15 +2,20 @@
 name: Deploy Next.js site to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -98,6 +103,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: python-output
+          # File the script produces
           path: |
             scripts/generated-files/team-data.ts
             scripts/generated-files/qb-data-weekly.ts
@@ -112,7 +118,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      # Download Python artifact before building
       - name: Download Python artifact
         uses: actions/download-artifact@v4
         with:
@@ -144,6 +150,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
+          # Automatically inject basePath in your Next.js configuration file and disable
+          # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
+          #
+          # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
 
       - name: Restore cache
@@ -151,6 +161,7 @@ jobs:
         with:
           path: .next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
 
       - name: Install dependencies
